# CsoundUnityNativeTools

./: .gitignore  README.md  build-all.ps1  build-all.sh
android-midi/: README.md  build.sh
native-input/: CMakeLists.txt  README.md  build-android.sh  build-ios.sh  build-macos.sh  build-windows.ps1
native-input/src/: cni_aaudio.cpp  cni_apple.mm  cni_coreaudio.mm  cni_ringbuffer.h  cni_wasapi.cpp
